[package]
name = "npp-sys"
version = "0.0.1"
authors = ["Jan Van Sweevelt <vansweej@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
readme = "README.md"
description = "Rust library providing bindings for Nvidia's NPP library"
repository = "https://github.com/vansweej/npp-rs.git"
categories = ["external-ffi-bindings", "computer-vision"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58.1"