[package]
name = "npp-rs"
version = "0.1.0-dev"
authors = ["Jan Van Sweevelt <vansweej@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "Rust library providing bindings for Nvidia's NPP library"
repository = "https://github.com/vansweej/npp-rs.git"
categories = ["api-bindings", "computer-vision"]
autobenches = false

[dependencies]
npp-sys = { path = "../npp-sys" }
# npp-sys = "0.0.1"  # release fallback
cudarc = { version = "0.9", default-features = false, features = ["driver", "std"] }
thiserror = "2"
# half = "2"  # TODO(M2): uncomment for half::f16 NppPixelType support

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }
pretty_assertions = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[[bench]]
name = "bench_resize_correctness"
harness = false
required-features = ["gpu"]

[[bench]]
name = "bench_resize_size"
harness = false
required-features = ["gpu"]

[[bench]]
name = "bench_resize_modes"
harness = false
required-features = ["gpu"]

[features]
default = []
# Enable to run GPU-dependent tests (manual gate — no GPU lane in CI).
gpu = []
